<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:layout_marginBottom="8dp"
    android:padding="16dp"
    xmlns:tools="http://schemas.android.com/tools"
    android:background="@drawable/custom_rounded_corner">

    <ImageView
        android:id="@+id/iv_movie_poster"
        android:layout_width="150dp"
        android:layout_height="200dp"
        android:src="@color/navy"
        android:contentDescription="@string/movie_illustration"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/tv_movie_title"
        android:layout_width="250dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="16dp"
        android:layout_marginTop="16dp"
        android:fontFamily="@font/avenirnextltpro_bold"
        android:textAlignment="textStart"
        android:textColor="@color/black"
        android:textSize="18sp"
        app:layout_constraintStart_toEndOf="@id/iv_movie_poster"
        app:layout_constraintTop_toTopOf="parent"
        tools:text="@string/app_name" />

    <TextView
        android:id="@+id/tv_movie_information_date"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="16dp"
        android:layout_marginTop="16dp"
        android:fontFamily="@font/avenirnextltpro_regular"
        android:text="@string/released_date"
        android:textColor="@color/dark_gray"
        android:textSize="12sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintStart_toEndOf="@id/iv_movie_poster"
        app:layout_constraintTop_toBottomOf="@id/tv_movie_title" />

    <TextView
        android:id="@+id/tv_movie_information_date_actual"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="8dp"
        android:fontFamily="@font/avenirnextltpro_regular"
        android:text="@string/no_information"
        android:textColor="@color/dark_gray"
        android:textSize="12sp"
        app:layout_constraintStart_toEndOf="@id/tv_movie_information_date"
        app:layout_constraintTop_toTopOf="@id/tv_movie_information_date"
        app:layout_constraintBottom_toBottomOf="@id/tv_movie_information_date"/>

</androidx.constraintlayout.widget.ConstraintLayout>