<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:padding="30dp"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools">

    <ImageView
        android:id="@+id/iv_movie_simple_information"
        android:layout_width="150dp"
        android:layout_height="200dp"
        android:layout_marginTop="16dp"
        android:contentDescription="@string/movie_illustration"
        android:src="@color/black"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.51"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/tv_movie_simple_information_title"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="16dp"
        android:fontFamily="@font/avenirnextltpro_demi"
        android:textColor="@color/black"
        android:textSize="12sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/iv_movie_simple_information"
        tools:text="@string/app_name" />

    <LinearLayout
        android:id="@+id/ll_status"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="8dp"
        android:orientation="horizontal"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/tv_movie_simple_information_title">

        <TextView
            android:id="@+id/tv_movie_simple_information_status"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:fontFamily="@font/avenirnextltpro_regular"
            android:text="@string/status"
            android:textColor="@color/dark_gray"
            android:textSize="12sp" />

        <TextView
            android:id="@+id/tv_movie_simple_information_status_actual"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="8dp"
            android:fontFamily="@font/avenirnextltpro_regular"
            android:text="@string/no_information"
            android:textColor="@color/dark_gray"
            android:textSize="12sp" />
    </LinearLayout>

    <LinearLayout
        android:id="@+id/ll_date"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="8dp"
        android:orientation="horizontal"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/ll_status">
        <TextView
            android:id="@+id/tv_movie_simple_information_date"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:fontFamily="@font/avenirnextltpro_regular"
            android:textColor="@color/dark_gray"
            android:textSize="12sp"
            android:text="@string/released_date"
            />

        <TextView
            android:id="@+id/tv_movie_simple_information_date_actual"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="8dp"
            android:fontFamily="@font/avenirnextltpro_regular"
            android:text="@string/no_information"
            android:textColor="@color/dark_gray"
            android:textSize="12sp" />
    </LinearLayout>

    <LinearLayout
        android:id="@+id/ll_popularity"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="8dp"
        android:orientation="horizontal"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/ll_date">
        <TextView
            android:id="@+id/tv_movie_simple_information_popularity"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:fontFamily="@font/avenirnextltpro_regular"
            android:textColor="@color/dark_gray"
            android:textSize="12sp"
            android:text="@string/popularity"
            />

        <TextView
            android:id="@+id/tv_movie_simple_information_popularity_actual"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="8dp"
            android:fontFamily="@font/avenirnextltpro_regular"
            android:text="@string/no_information"
            android:textColor="@color/dark_gray"
            android:textSize="12sp" />
    </LinearLayout>


    <TextView
        android:id="@+id/tv_movie_simple_information_genre"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="8dp"
        android:fontFamily="@font/avenirnextltpro_medium"
        android:text="@string/genre"
        android:textColor="@color/orange"
        android:textSize="12sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/ll_popularity" />

    <androidx.recyclerview.widget.RecyclerView
        android:id="@+id/rv_movie_simple_information_genre"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="8dp"
        android:layout_marginBottom="8dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/tv_movie_simple_information_genre" />



</androidx.constraintlayout.widget.ConstraintLayout>