<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/white"
    tools:context=".view.home.fragments.HomeFragment">

    <androidx.core.widget.NestedScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent">
        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_marginVertical="16dp"
            android:background="@color/white">
            <TextView
                android:id="@+id/tv_movie_popular"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="16dp"
                android:layout_marginTop="16dp"
                android:fontFamily="@font/avenirnextltpro_bold"
                android:text="@string/popular"
                android:textColor="@color/black"
                android:textSize="16sp"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent" />

            <TextView
                android:id="@+id/tv_more_movie_popular"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginEnd="16sp"
                android:layout_marginTop="16dp"
                android:fontFamily="@font/avenirnextltpro_medium"
                android:text="@string/more_movie"
                android:textColor="@color/blue"
                android:textSize="14sp"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintTop_toTopOf="parent" />

            <androidx.recyclerview.widget.RecyclerView
                android:id="@+id/rv_movie_popular"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginStart="16dp"
                android:layout_marginTop="8dp"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/tv_movie_popular" />

            <TextView
                android:id="@+id/tv_movie_top_rated"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/top_rated"
                android:textColor="@color/black"
                android:textSize="16sp"
                android:layout_marginTop="16dp"
                android:layout_marginStart="16dp"
                android:fontFamily="@font/avenirnextltpro_bold"
                app:layout_constraintTop_toBottomOf="@id/rv_movie_popular"
                app:layout_constraintStart_toStartOf="parent"/>

            <androidx.recyclerview.widget.RecyclerView
                android:id="@+id/rv_movie_top_rated"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginStart="16dp"
                android:layout_marginTop="8dp"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@id/tv_movie_top_rated" />

            <TextView
                android:id="@+id/tv_movie_now_playing"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/now_playing"
                android:textColor="@color/black"
                android:textSize="16sp"
                android:layout_marginTop="16dp"
                android:layout_marginStart="16dp"
                android:fontFamily="@font/avenirnextltpro_bold"
                app:layout_constraintTop_toBottomOf="@id/rv_movie_top_rated"
                app:layout_constraintStart_toStartOf="parent"/>

            <androidx.recyclerview.widget.RecyclerView
                android:id="@+id/rv_movie_now_playing"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginStart="16dp"
                android:layout_marginTop="8dp"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@id/tv_movie_now_playing" />

            <TextView
                android:id="@+id/tv_movie_upcoming"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/upcoming"
                android:textColor="@color/black"
                android:textSize="16sp"
                android:layout_marginTop="16dp"
                android:layout_marginStart="16dp"
                android:fontFamily="@font/avenirnextltpro_bold"
                app:layout_constraintTop_toBottomOf="@id/rv_movie_now_playing"
                app:layout_constraintStart_toStartOf="parent"/>

            <androidx.recyclerview.widget.RecyclerView
                android:id="@+id/rv_movie_upcoming"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginStart="16dp"
                android:layout_marginTop="8dp"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@id/tv_movie_upcoming" />

        </androidx.constraintlayout.widget.ConstraintLayout>

    </androidx.core.widget.NestedScrollView>

    <ProgressBar
        android:id="@+id/pb_home"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:indeterminateDrawable="@drawable/custom_progress_bar"
        android:indeterminate="true"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

</androidx.constraintlayout.widget.ConstraintLayout>